// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/AdminConsole/ClientSideUserIdsSetting > initial state > with multiple items 1`] = `
<div>
  <div
    class="form-group"
    data-testid="MySetting"
  >
    <label
      class="control-label col-sm-4"
      for="MySetting"
    >
      Client side user ids:
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control"
        id="MySetting"
        placeholder="E.g.: \\"userid1,userid2\\""
        type="text"
        value="userid1,userid2,id3"
      />
      <div
        class="help-text"
        data-testid="MySettinghelp-text"
      >
        Set the user ids you want to track for client side metrics. Separate values with a comma.
      </div>
    </div>
  </div>
</div>
`;

exports[`components/AdminConsole/ClientSideUserIdsSetting > initial state > with no items 1`] = `
<div>
  <div
    class="form-group"
    data-testid="MySetting"
  >
    <label
      class="control-label col-sm-4"
      for="MySetting"
    >
      Client side user ids:
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control"
        id="MySetting"
        placeholder="E.g.: \\"userid1,userid2\\""
        type="text"
        value=""
      />
      <div
        class="help-text"
        data-testid="MySettinghelp-text"
      >
        Set the user ids you want to track for client side metrics. Separate values with a comma.
      </div>
    </div>
  </div>
</div>
`;

exports[`components/AdminConsole/ClientSideUserIdsSetting > initial state > with one item 1`] = `
<div>
  <div
    class="form-group"
    data-testid="MySetting"
  >
    <label
      class="control-label col-sm-4"
      for="MySetting"
    >
      Client side user ids:
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control"
        id="MySetting"
        placeholder="E.g.: \\"userid1,userid2\\""
        type="text"
        value="userid1"
      />
      <div
        class="help-text"
        data-testid="MySettinghelp-text"
      >
        Set the user ids you want to track for client side metrics. Separate values with a comma.
      </div>
    </div>
  </div>
</div>
`;

exports[`components/AdminConsole/ClientSideUserIdsSetting > renders properly when disabled 1`] = `
<div>
  <div
    class="form-group"
    data-testid="MySetting"
  >
    <label
      class="control-label col-sm-4"
      for="MySetting"
    >
      Client side user ids:
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control"
        disabled=""
        id="MySetting"
        placeholder="E.g.: \\"userid1,userid2\\""
        type="text"
        value="userid1,userid2"
      />
      <div
        class="help-text"
        data-testid="MySettinghelp-text"
      >
        Set the user ids you want to track for client side metrics. Separate values with a comma.
      </div>
    </div>
  </div>
</div>
`;

exports[`components/AdminConsole/ClientSideUserIdsSetting > renders properly when set by environment variable 1`] = `
<div>
  <div
    class="form-group"
    data-testid="MySetting"
  >
    <label
      class="control-label col-sm-4"
      for="MySetting"
    >
      Client side user ids:
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control"
        disabled=""
        id="MySetting"
        placeholder="E.g.: \\"userid1,userid2\\""
        type="text"
        value="userid1,userid2"
      />
      <div
        class="help-text"
        data-testid="MySettinghelp-text"
      >
        Set the user ids you want to track for client side metrics. Separate values with a comma.
      </div>
      <div
        class="alert alert-warning"
      >
        This setting has been set through an environment variable. It cannot be changed through the System Console.
      </div>
    </div>
  </div>
</div>
`;
